<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_custom_bottom_view"
    android:padding="@dimen/element_margin"
    android:theme="@style/BottomSheetDialogTheme"
    tools:context="com.fintech.finalwork.presentation.streams.StreamsFragment">

    <EditText
        android:id="@+id/stream_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/element_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:autofillHints=""
        android:backgroundTint="@color/gray"
        android:hint="@string/title"
        android:inputType="text"
        android:paddingVertical="@dimen/medium_margin"
        android:paddingTop="@dimen/element_small_margin"
        android:paddingBottom="@dimen/element_small_margin"
        android:textColor="@color/white_light"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/stream_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/element_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:autofillHints=""
        android:backgroundTint="@color/gray"
        android:hint="@string/description"
        android:inputType="text"
        android:paddingVertical="@dimen/medium_margin"
        android:paddingTop="@dimen/element_small_margin"
        android:paddingBottom="@dimen/element_small_margin"
        android:textColor="@color/white_light"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stream_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin"
        android:layout_marginEnd="@dimen/element_margin"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:text="@string/accept"
        app:layout_constraintEnd_toStartOf="@id/dismiss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stream_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin"
        android:layout_marginStart="@dimen/element_margin"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:text="@string/dismiss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/accept"
        app:layout_constraintTop_toBottomOf="@id/stream_description" />
</androidx.constraintlayout.widget.ConstraintLayout>