<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:clickable="true"
    android:focusable="true"
    tools:context="com.fintech.finalwork.presentation.topic.TopicFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
        android:text="@string/stream_draft"
        custom:titleTextColor="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/topic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/medium_margin"
        android:background="@color/black_light"
        android:padding="@dimen/element_margin"
        android:text="@string/topic_draft"
        android:textAlignment="center"
        android:textColor="@color/white_gray"
        custom:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        custom:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        custom:layout_constraintBottom_toTopOf="@id/input_box"
        custom:layout_constraintTop_toBottomOf="@id/topic_title" />

    <ProgressBar
        android:id="@+id/loading_progress"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="top|end"
        android:layout_margin="18dp"
        android:elevation="16dp"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/input_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_dark"
        android:orientation="horizontal"
        android:padding="@dimen/element_margin"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/element_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:autofillHints=""
            android:background="@drawable/bg_custom_input_view"
            android:hint="@string/input_draft"
            android:inputType="text"
            android:textColor="@color/white_gray"
            android:textColorHint="@color/white_gray" />

        <ImageButton
            android:id="@+id/send_image"
            android:layout_width="@dimen/image_roud_size"
            android:layout_height="@dimen/image_roud_size"
            android:layout_marginEnd="@dimen/element_margin"
            android:background="@drawable/ic_vector_plus"
            android:contentDescription="@string/input_draft"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toEndOf="@id/chat"
            custom:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>